@@ -17,6 +17,9 @@ RELEASE 0.XX - XXX
 
   - Fix being able to use $PDB and $WINDWOWS_INSERT_MANIFEST together.
 
+  - Don't crash if un-installing the Intel C compiler leaves left-over,
+    dangling entries in the Windows registry.
+
   From Steven Knight:
 
   - Support the ability to subclass the new-style "str" class as input
